# PersonalAssistantMysite

./: db.sqlite3  manage.py  pyproject.toml
PersonalAssistantMysite/: asgi.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
PersonalAssistantMysite/migrations/: 0001_initial.py
templates/: add_contact.html  add_note.html  contact_list.html  edit_contact.html  edit_note.html  home.html  note_list.html
